// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LayerItem> with media queries applies default styles for each position: bottom 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

@media only screen and (min-width:0em) {
  .-ui-0 {
    bottom: 0;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
  }
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> with media queries applies default styles for each position: bottomLeft 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

@media only screen and (min-width:0em) {
  .-ui-0 {
    bottom: 0;
    left: 0;
  }
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> with media queries applies default styles for each position: bottomRight 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

@media only screen and (min-width:0em) {
  .-ui-0 {
    bottom: 0;
    right: 0;
  }
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> with media queries applies default styles for each position: center 1`] = `
<DocumentFragment>
  @media only screen and (min-width:0em) {
  .-ui-0 {
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
  }
}

.-ui-1 {
  position: absolute;
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> with media queries applies default styles for each position: left 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

@media only screen and (min-width:0em) {
  .-ui-0 {
    left: 0;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
  }
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> with media queries applies default styles for each position: right 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

@media only screen and (min-width:0em) {
  .-ui-0 {
    right: 0;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
  }
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> with media queries applies default styles for each position: top 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

@media only screen and (min-width:0em) {
  .-ui-0 {
    top: 0;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
  }
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> with media queries applies default styles for each position: topLeft 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

@media only screen and (min-width:0em) {
  .-ui-0 {
    top: 0;
    left: 0;
  }
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> with media queries applies default styles for each position: topRight 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

@media only screen and (min-width:0em) {
  .-ui-0 {
    top: 0;
    right: 0;
  }
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> with media queries applies styles with offsets for each position: bottom 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

@media only screen and (min-width:0em) {
  .-ui-0 {
    bottom: 10px;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
  }
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> with media queries applies styles with offsets for each position: bottomLeft 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

@media only screen and (min-width:0em) {
  .-ui-0 {
    bottom: 10px;
    left: 10px;
  }
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> with media queries applies styles with offsets for each position: bottomRight 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

@media only screen and (min-width:0em) {
  .-ui-0 {
    bottom: 10px;
    right: 10px;
  }
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> with media queries applies styles with offsets for each position: left 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

@media only screen and (min-width:0em) {
  .-ui-0 {
    left: 10px;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
  }
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> with media queries applies styles with offsets for each position: right 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

@media only screen and (min-width:0em) {
  .-ui-0 {
    right: 10px;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
  }
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> with media queries applies styles with offsets for each position: top 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

@media only screen and (min-width:0em) {
  .-ui-0 {
    top: 10px;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
  }
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> with media queries applies styles with offsets for each position: topLeft 1`] = `
<DocumentFragment>
  @media only screen and (min-width:0em) {
  .-ui-0 {
    top: 10px;
    left: 10px;
  }
}

.-ui-1 {
  position: absolute;
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> with media queries applies styles with offsets for each position: topRight 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

@media only screen and (min-width:0em) {
  .-ui-0 {
    top: 10px;
    right: 10px;
  }
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> without media queries applies default styles for each position: bottom 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

.-ui-0 {
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> without media queries applies default styles for each position: bottomLeft 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

.-ui-0 {
  bottom: 0;
  left: 0;
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> without media queries applies default styles for each position: bottomRight 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

.-ui-0 {
  bottom: 0;
  right: 0;
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> without media queries applies default styles for each position: center 1`] = `
<DocumentFragment>
  .-ui-0 {
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.-ui-1 {
  position: absolute;
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> without media queries applies default styles for each position: left 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

.-ui-0 {
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> without media queries applies default styles for each position: right 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

.-ui-0 {
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> without media queries applies default styles for each position: top 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

.-ui-0 {
  top: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> without media queries applies default styles for each position: topLeft 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

.-ui-0 {
  top: 0;
  left: 0;
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> without media queries applies default styles for each position: topRight 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

.-ui-0 {
  top: 0;
  right: 0;
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> without media queries applies styles with offsets for each position: bottom 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

.-ui-0 {
  bottom: 10px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> without media queries applies styles with offsets for each position: bottomLeft 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

.-ui-0 {
  bottom: 10px;
  left: 10px;
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> without media queries applies styles with offsets for each position: bottomRight 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

.-ui-0 {
  bottom: 10px;
  right: 10px;
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> without media queries applies styles with offsets for each position: left 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

.-ui-0 {
  left: 10px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> without media queries applies styles with offsets for each position: right 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

.-ui-0 {
  right: 10px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> without media queries applies styles with offsets for each position: top 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

.-ui-0 {
  top: 10px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> without media queries applies styles with offsets for each position: topLeft 1`] = `
<DocumentFragment>
  .-ui-0 {
  top: 10px;
  left: 10px;
}

.-ui-1 {
  position: absolute;
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;

exports[`<LayerItem> without media queries applies styles with offsets for each position: topRight 1`] = `
<DocumentFragment>
  .-ui-1 {
  position: absolute;
}

.-ui-0 {
  top: 10px;
  right: 10px;
}

<div
    class="-ui-0 -ui-1"
  />
</DocumentFragment>
`;
